public/css/main.css
html {
    min-height: 100%;
    width: 100%;
    height: 100%;
}
body {
    font: 400 15px/1.8 Lato, sans-serif;
    color: #777;
    min-height: 100%;
    width: 100%;
    height: 100%;
}
h3,
h4 {
    margin: 10px 0 30px 0;
    letter-spacing: 5px;
    font-size: 20px;
    color: #111;
}
#home {
    width: 100% height: 100%;
}
.container {
    padding-top: 60px;
    padding-left: 100px;
    padding-right: 100px;
    padding-bottom: 0px;
}
.form-group {
    text-align: left
}
.dropdown-menu {
    left: -40px;
    right: -40px;
}
@media (max-width: 600px) {
    .carousel-caption {
        display: none;
        /* Hide the carousel text when the screen is less than 600 pixels wide */
    }
}
.block .img-responsive {
    margin: 0 auto;
}
.bg-1 h3 {
    color: #000;
}
.bg-1 p {
    font-style: italic;
}
.list-group-item:first-child {
    border-top-right-radius: 0;
    border-top-left-radius: 0;
}
.list-group-item:last-child {
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
}
.thumbnail {
    padding: 0 0 15px 0;
    border: none;
    border-radius: 0;
}
.thumbnail p {
    margin-top: 15px;
    color: #555;
}
.btn {
    padding: 10px 20px;
    background-color: #333;
    color: #f1f1f1;
    border-radius: 0;
    transition: .2s
}
.btn:hover,
.btn:focus {
    border: 1px solid #333;
    background-color: #fff;
    color: #000;
}
h4,
.close {
    background-color: #333;
    color: #fff !important;
    text-align: center;
    font-size: 30px;
}
.nav-tabs li a {
    color: #777;
}
.tab-content p,
h2 {
    margin-left: 15px;
}
.navbar {
    font-family: Montserrat, sans-serif;
    margin-bottom: 0;
    font-weight: bold;
    background-color: rgb(0, 87, 231);
    border: 0;
    font-size: 15px !important;
    letter-spacing: 4px;
    opacity: 0.9;
}
.navbar li a,
.navbar .navbar-brand {
    color: #d5d5d5 !important;
    height: 45px;
}
.navbar-nav li a:hover {
    color: #fff !important;
}
.navbar-nav li.active a {
    color: #fff !important;
    background-color: #29292c !important;
}
.navbar-default .navbar-toggle {
    border-color: transparent;
}
footer {
    /*background-color: #2d2d30;*/
    /*Black/Dark Grey*/
    
    background-color: rgb(0, 87, 231);
    color: #f5f5f5;
    padding: 1em;
    position: relative;
}
footer a {
    color: #f5f5f5;
}
footer a:hover {
    color: #777;
    text-decoration: none;
}
.form-control {
    border-radius: 0;
}
#form-register {
    height: 100%;
}
textarea {
    resize: none;
}
.dropdown {} #user-dropdown {
    align-content: center
}
#user-dropdown-menu {
    left: 50%;
    right: auto;
    text-align: center;
    transform: translate(-50%, 0);
}
#contact-us {
    background: #2d2d30;
    color: #bdbdbd;
    width: 100%;
}
li {
    display: inline-block;
    margin-left: 50 px;
    /* This is when the drop down box appears */
    
    position: relative;
}
/*NEW PART*/

.btn-group {} select {
    line-height: 2.5em;
}
.btn-group {
    margin: 10px 10px 10px 10px;
}
#blockDetails {
    position: relative;
    height: auto;
}
.alert {
    display: none;
}
.main-title {
    border-bottom: 1px solid #000;
    margin-bottom: 3em;
    display: inline-block;
    margin-left: 35%;
}
.btn {
    background-color: rgb(230, 230, 230);
    color: rgb(0, 87, 231);
    width: 11em;
    text-align: center;
}
.btn:hover {
    background-color: rgb(192, 192, 192);
    color: rgb(0, 87, 231);
    text-decoration: underline;
}

